<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:text="@string/registration"
            android:textSize="30sp"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:hint="@string/phone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:clickable="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/username">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:inputType=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/up_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_case"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/low_case"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_case"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digits"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/symbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbols"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/register"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_register"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>